# time-state-recorder-desktop

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  Start Time State Recorder.bat  Stop Time State Recorder.bat  index.html  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
.cargo/: config.toml
collector/: Cargo.toml  blocker_config.json  start.bat
collector/src/: activity.rs  api.rs  blocker.rs  image_retention.rs  input.rs  insights.rs  interval.rs  lib.rs  llm_json.rs  main.rs  models.rs  notion_smoke.rs  prompt_time.rs  screenshot.rs  storage.rs  visual_analysis.rs  visual_labels.rs  window.rs
collector/tests/: activity_tests.rs  api_tests.rs  image_retention.rs  insight_tests.rs  interval_tests.rs  llm_json_tests.rs  notion_daily_archive_smoke_tests.rs  storage_tests.rs  visual_analysis_tests.rs
docs/: infra.md  product-pitch.md
docs/api/: next-query-api.md  notion-daily-archive.md
docs/product/: source-import-notes.md  windows-desktop-open-source-goal-contract.md  windows-desktop-open-source-prd.md
docs/releases/: v1.4.0.md
docs/runbooks/: windows-collector.md
docs/security/: public-repo-boundary.md
examples/config/: config.example.json
scripts/: package-release.ps1  prepare-tauri-sidecar.ps1  smoke-notion-daily-archive.ps1  start-user.ps1  stop-user.ps1  test-launcher.ps1  verify-public-boundary.ps1  web-server.mjs
src/: ActivityReview.tsx  App.test.tsx  App.tsx  CollectorMonitor.test.tsx  CollectorMonitor.tsx  DailyBriefPanel.tsx  DailyTracking.tsx  Dashboard.tsx  InputActivity.tsx  InsightFeedback.test.tsx  InsightFeedback.tsx  SettingsView.test.tsx  SettingsView.tsx  TimelineView.tsx  TodayFlowBoard.test.tsx  TodayFlowBoard.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: config.rs  main.rs  secrets.rs
src/data/: activitySample.ts  feature1Sample.ts  feature2Sample.ts  feature3Sample.test.ts  feature3Sample.ts  visualSummarySample.ts
src/lib/: activity.test.ts  activity.ts  api.test.ts  api.ts  collectorFetch.test.ts  collectorFetch.ts  dailyBrief.test.ts  dailyBrief.ts  dateQuery.test.ts  dateQuery.ts  desktopConfig.ts  desktopConfigContract.test.ts  desktopFoundation.test.ts  desktopReleasePackaging.test.ts  desktopRuntime.ts  desktopRuntimeContract.test.ts  flowModel.test.ts  flowModel.ts  health.test.ts  health.ts  input.test.ts  input.ts  insightPresentation.test.ts  insightPresentation.ts  insights.test.ts  insights.ts  screenshots.test.ts  screenshots.ts  statistics.ts  (+3 more)
