[package]
name = "tsr-collector"
version = "1.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.25", features = ["json"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Graphics_Gdi",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[dev-dependencies]
tempfile = "3.23.0"
