[package]
name = "time-state-recorder-desktop"
version = "1.4.0"
description = "Local-first Windows desktop shell for Time State Recorder"
authors = ["wenlei0603"]
edition = "2024"
license = "MIT"
repository = "https://github.com/wenlei0603/time-state-recorder-desktop"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography"
] }
